[gd_scene load_steps=36 format=3 uid="uid://mjdcsbnous5v"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_utlsr"]
[ext_resource type="Texture2D" uid="uid://do54kvbqfiieg" path="res://EVil Wizard 2/Sprites/Idle.png" id="2_qfg1w"]
[ext_resource type="Texture2D" uid="uid://btx0y8ry1cb5j" path="res://EVil Wizard 2/Sprites/Run.png" id="3_4pxfo"]
[ext_resource type="PackedScene" uid="uid://bujghkvsgfil8" path="res://Utility/hurt_box.tscn" id="3_7yec2"]
[ext_resource type="Texture2D" uid="uid://cte4f8qwsmihj" path="res://Textures/GUI/exp_background.png" id="5_63633"]
[ext_resource type="Texture2D" uid="uid://bw42lsjradn74" path="res://Textures/GUI/exp_progress.png" id="6_738pv"]
[ext_resource type="FontFile" uid="uid://bkfsa3seymuu3" path="res://Font/tenderness.otf" id="7_qj8ig"]
[ext_resource type="AudioStream" uid="uid://2axalnq4rkec" path="res://powerUp7.ogg" id="8_323yd"]
[ext_resource type="Texture2D" uid="uid://bo308w13rbkwb" path="res://Textures/GUI/healthbar.png" id="8_kks3y"]
[ext_resource type="Texture2D" uid="uid://byc3ns24l4hrs" path="res://Textures/GUI/health.png" id="9_2mb83"]
[ext_resource type="AudioStream" uid="uid://c6vx3n8v84jnh" path="res://Time Driving.ogg" id="11_v6h71"]
[ext_resource type="AudioStream" uid="uid://s3p3376dtw20" path="res://Space Cadet.ogg" id="12_y2s3u"]
[ext_resource type="PackedScene" uid="uid://dx5q2vkx6avrb" path="res://Utility/basic_button.tscn" id="13_e147d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ugavx"]
atlas = ExtResource("2_qfg1w")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtkq0"]
atlas = ExtResource("2_qfg1w")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_avu25"]
atlas = ExtResource("2_qfg1w")
region = Rect2(500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooikv"]
atlas = ExtResource("2_qfg1w")
region = Rect2(750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mujh"]
atlas = ExtResource("2_qfg1w")
region = Rect2(1000, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nmdn"]
atlas = ExtResource("2_qfg1w")
region = Rect2(1250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxnnv"]
atlas = ExtResource("2_qfg1w")
region = Rect2(1500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk520"]
atlas = ExtResource("2_qfg1w")
region = Rect2(1750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bk5k"]
atlas = ExtResource("3_4pxfo")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcepm"]
atlas = ExtResource("3_4pxfo")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bamp"]
atlas = ExtResource("3_4pxfo")
region = Rect2(500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_osf1b"]
atlas = ExtResource("3_4pxfo")
region = Rect2(750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihp3j"]
atlas = ExtResource("3_4pxfo")
region = Rect2(1000, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr2en"]
atlas = ExtResource("3_4pxfo")
region = Rect2(1250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndfd5"]
atlas = ExtResource("3_4pxfo")
region = Rect2(1500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_yc6av"]
atlas = ExtResource("3_4pxfo")
region = Rect2(1750, 0, 250, 250)

[sub_resource type="SpriteFrames" id="SpriteFrames_66dar"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugavx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtkq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avu25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooikv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mujh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nmdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxnnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk520")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bk5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcepm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bamp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osf1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihp3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr2en")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndfd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yc6av")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3usea"]
radius = 8.0
height = 34.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tc0c"]
size = Vector2(20, 37.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_ggygf"]
radius = 325.591

[sub_resource type="CircleShape2D" id="CircleShape2D_sudgo"]
radius = 134.004

[sub_resource type="CircleShape2D" id="CircleShape2D_8j45m"]
radius = 11.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_utlsr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -11)
sprite_frames = SubResource("SpriteFrames_66dar")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.0547846

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -5.96046e-08)
scale = Vector2(233.534, -179.295)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3usea")

[node name="HurtBox" parent="." instance=ExtResource("3_7yec2")]
position = Vector2(0, -16)
collision_mask = 2
HurtBoxType = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_7tc0c")

[node name="Attack" type="Node2D" parent="."]

[node name="ShadowBoltTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="ShadowBoltAttackTimer" type="Timer" parent="Attack/ShadowBoltTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true

[node name="JavelinBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
scale = Vector2(1.14572, 1.12276)
shape = SubResource("CircleShape2D_ggygf")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_sudgo")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_8j45m")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -321.0
offset_top = -181.0
offset_right = 319.0
offset_bottom = 179.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
top_level = true
layout_mode = 0
offset_right = 640.0
offset_bottom = 40.0
texture_under = ExtResource("5_63633")
texture_progress = ExtResource("6_738pv")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("7_qj8ig")
theme_override_font_sizes/font_size = 16
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.973
anchor_top = 1.092
anchor_right = 1.025
anchor_bottom = 1.114
offset_left = 1.27997
offset_top = -0.119995
offset_right = -6.10352e-05
offset_bottom = -0.0400391
value = 50.0
texture_over = ExtResource("8_kks3y")
texture_progress = ExtResource("9_2mb83")

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.506
anchor_top = 0.5
anchor_right = 0.577
anchor_bottom = 0.561
offset_left = 278.16
offset_top = 18.0
offset_right = 312.72
offset_bottom = 20.04
theme_override_fonts/font = ExtResource("7_qj8ig")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 326.0
offset_top = 203.0
offset_right = 526.0
offset_bottom = 219.0
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 326.0
offset_top = 219.0
offset_right = 526.0
offset_bottom = 235.0
columns = 10

[node name="LevelUp" type="Panel" parent="GUILayer"]
unique_name_in_owner = true
process_mode = 2
visible = false
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="lbl_LevelUP" type="Label" parent="GUILayer/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("7_qj8ig")
text = "Level Up !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="snd_levelup" type="AudioStreamPlayer" parent="GUILayer/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("8_323yd")
volume_db = -11.45

[node name="DeathPanel" type="Panel" parent="GUILayer"]
unique_name_in_owner = true
process_mode = 2
visible = false
offset_left = 220.0
offset_top = -273.0
offset_right = 420.0
offset_bottom = -23.0

[node name="lbl_Result" type="Label" parent="GUILayer/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("7_qj8ig")
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="snd_victory" type="AudioStreamPlayer" parent="GUILayer/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("11_v6h71")
volume_db = -11.45

[node name="snd_lose" type="AudioStreamPlayer" parent="GUILayer/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("12_y2s3u")
volume_db = -11.45

[node name="btn_menu" parent="GUILayer/DeathPanel" instance=ExtResource("13_e147d")]
layout_mode = 0
offset_left = 60.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 230.0
text = "Menu"

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/ShadowBoltTimer" to="." method="_on_shadow_bolt_timer_timeout"]
[connection signal="timeout" from="Attack/ShadowBoltTimer/ShadowBoltAttackTimer" to="." method="_on_shadow_bolt_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/DeathPanel/btn_menu" to="." method="_on_btn_menu_click_end"]

[editable path="HurtBox"]
